--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
   "keywords": [],
   "dependencies": {
     "@nestjs/axios": "^3.1.3",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -45,6 +46,7 @@
     "@types/multer": "^1.4.12",
     "@types/papaparse": "^5.3.16",
     "bcrypt": "^6.0.0",
+    "cache-manager": "^6.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "encoding": "^0.1.13",
